--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   webview_flutter: ^4.13.0
+  video_player: ^2.10.0
+  linkify: ^4.1.0
 
 dev_dependencies:
   flutter_test:
